# API-Builder

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 06a4497af772_add_subscriptions_payments_workflows_.py  0c443386726a_add_admin_audit_log_table.py  16f6d20ccf4a_add_api_pricing_mode.py  5b9817751bb1_add_api_allowed_emails_table.py  8098b3cf7d17_create_users_table.py  8c395fe24b36_add_plan_settings_table.py  a2861ad6bed7_add_cashout_requests.py  c485bcb5502c_add_accounts_columns_and_rename_admin_.py  e1f90599e8ca_add_wallets_and_plan_monetization_.py  f1a2b3c4d5e6_add_extraction_selector_cache.py
backend/app/: config.py  db.py  main.py  redis.py
backend/app/api/: apis.py  (+12 more)
backend/scripts/: e2e_smoke.py
backend/tests/: conftest.py  test_admin.py  test_api_lifecycle.py  test_api_parameters.py  test_api_stats.py  test_api_subscriptions.py  test_auth.py  test_authoring.py  test_cashout.py  test_enrich.py  test_extraction.py  test_grants.py  test_llm_client.py  test_llm_extract.py  test_llm_extract_json.py  test_llm_multimodal.py  test_llm_provider.py  test_llm_semantic.py  test_moderation.py  test_param_coercion.py  test_per_call_pricing.py  test_plans.py  test_profile.py  test_quota.py  test_recorder_compile.py  test_recorder_mark_param.py  test_recorder_rerecord.py  test_replay.py  test_schema_infer.py  test_selector_cache.py  test_selector_compiler.py  test_selectors.py  test_sms_matcher.py  test_spec_builder.py  test_tier.py  test_wallet.py  test_wallet_purchases.py
(+136 files in other folders)
