[project]
name = "api-builder-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.15.0",
    "cryptography>=49.0.0",
    "fastapi>=0.139.0",
    "genson>=1.3.0",
    "google-auth>=2.55.1",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "openai>=2.44.0",
    "openapi-spec-validator>=0.9.0",
    "playwright>=1.61.0",
    "pydantic-settings>=2.14.2",
    "redis>=8.0.1",
    "requests>=2.34.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "tzdata>=2026.2",
    "uvicorn[standard]>=0.50.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
    "websockets>=15.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
